# plover-local-env-var

./: .gitignore  .pylintrc  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
plover_local_env_var/: env_var.py  extension.py
plover_local_env_var/config/: __init__.py  actions.py  file.py  loader.py  transformer.py
plover_local_env_var/env_var/: __init__.py  command.py  config.py  expand.py  expander.py
src/plover_local_env_var/: extension.py
src/plover_local_env_var/config/: __init__.py  loader.py
src/plover_local_env_var/env_var/: __init__.py  command.py  expander.py
test/: conftest.py  justfile  test_env_var.py
test/config/: conftest.py  test_actions.py  test_config.py
test/config/files/: valid_env_var_names.json  valid_env_var_names_mac_linux.json  valid_env_var_names_windows.json
test/env_var/: conftest.py  test_config.py  test_env_var.py  test_expand.py
test/env_var/files/: non_array_env_var_names.json  non_existent.json
