[project]
name = "plover_local_env_var"
authors = [
  {name = "Paul Fioravanti", email = "paul@paulfioravanti.com"}
]
description = "Use your local environment variables in Plover"
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Plugins",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9"
]
keywords = [
  "plover",
  "plover_plugin"
]
requires-python = ">=3.9, <3.10"
dependencies = [
  "plover >= 4.0.0.dev12"
]
dynamic = [
  "version"
]

[project.urls]
repository = "https://github.com/paulfioravanti/plover-local-env-var"

[project.entry-points."plover.extension"]
# "{:ENV_VAR:$USER}"
plover_local_env_var = "plover_local_env_var.extension:LocalEnvVar"

[build-system]
requires = [
  "setuptools>=61.0.0",
  "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "plover_local_env_var",
  "plover_local_env_var.config",
  "plover_local_env_var.env_var"
]

[tool.setuptools_scm]

[tool.pytest]
pythonpath = "plover_local_env_var"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "plover.*"
ignore_missing_imports = true
