[metadata]
author = Paul Fioravanti
author_email = paul@paulfioravanti.com
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
description = Use your local environment variables in Plover
keywords = plover plover_plugin
license = GNU General Public License v3 or later (GPLv3+)
long_description = file: README.md
long_description_content_type = text/markdown
name = plover_local_env_var
url = https://github.com/paulfioravanti/plover-local-env-var
version = 0.2.3

[options]
install_requires =
    plover>=4.0.0.dev12
setup_requires =
    setuptools>=30.3.0
zip_safe = True
packages =
    plover_local_env_var
    plover_local_env_var.config
    plover_local_env_var.env_var

[options.entry_points]
plover.extension =
    plover_local_env_var = plover_local_env_var.extension:LocalEnvVar

[tool:pytest]
pythonpath = plover_local_env_var

[mypy]

[mypy-plover_local_env_var.*]
implicit_reexport = True

[mypy-plover.*]
ignore_missing_imports = True
