[metadata]
author = Paul Fioravanti
author_email = paul@paulfioravanti.com
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
description = Use your local environment variables in Plover
keywords = plover plover_plugin
license = GNU General Public License v3 or later (GPLv3+)
long_description = file: README.md
long_description_content_type = text/markdown
name = plover_local_env_var
url = https://github.com/paulfioravanti/plover-local-env-var
version = 0.3.9

[options]
install_requires =
    plover >= 4.0.0.dev12
setup_requires =
    setuptools >= 30.3.0
zip_safe = True
package_dir =
    = src
packages = find:

[options.entry_points]
plover.extension =
    plover_local_env_var = plover_local_env_var.extension:LocalEnvVar

[options.extras_require]
test =
    coverage
    mypy
    pylint
    pytest
    pytest-cov
    pytest-mock

[options.packages.find]
where = src

[mypy]
strict = True

[mypy-plover.*]
ignore_missing_imports = True
